Updated 3 files via CloudCannon

--- a/site/_data/author.yml
+++ b/site/_data/author.yml
@@ -1,4 +1,2 @@
-#-------------------------------
-# Author Settings
-author_name: Vanessa Marley
-author_image: '/images/avatar.jpg'
+author_name: JuneMyeong LEE
+author_image: /uploads/47f298b717cff61f1416131764011a50.jpg
