--- a/site/_data/general_settings.yml
+++ b/site/_data/general_settings.yml
@@ -1,5 +1,5 @@
-title: Vonge
-description: Vonge is a portfolio site template for Jekyll
-social_media_share_image: /images/01.jpg
+title: JUNE65
+description: JUNE65 is a portfolio site template for Jekyll
+social_media_share_image: /uploads/47f298b717cff61f1416131764011a50-1.jpg
 disqus-identifier:
 google-analytics:
