Updated 'site/_data/navigation.yml' via CloudCannon

--- a/site/_data/navigation.yml
+++ b/site/_data/navigation.yml
@@ -5,13 +5,13 @@ menu__settings:
       url: /
     - title: Projects
       url: /projects/
+    - title: About
+      submenu:
+        - url: /about/
+          title: About
     - title: Pages
       submenu:
         - url: /elements/
           title: Elements
         - url: /about/
           title: About
-    - title: /about/
-      submenu:
-        - url: /about/
-          title: ''
