Updated 'site/_data/navigation.yml' via CloudCannon

--- a/site/_data/navigation.yml
+++ b/site/_data/navigation.yml
@@ -7,7 +7,7 @@ menu__settings:
       url: /about/
     - title: Projects
       url: /projects/
-    - title: Projects
+    - title: Team
       url: /team/
     - title: Pages
       submenu:
